# fact-sphere-cli

./: .editorconfig  .travis.yml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
fact_sphere_cli/: __about__.py  cli.py
src/fact_sphere_cli/: __about__.py  __main__.py  cli.py
