[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fact-sphere-cli"
description = "A CLI for Portal 2 Fact Sphere facts."
version = "1.0.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/fact-sphere-cli"
homepage = "https://github.com/thebigmunch/fact-sphere-cli"

[tool.poetry.dependencies]
python = "^3.6"

click = "^6.0"
click-default-group = "^1.2"
fact-sphere = "^1.0"

flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0.0", optional = true }

[tool.poetry.extras]
dev = [ "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm" ]
lint = [ "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm" ]

[tool.poetry.scripts]
fact-sphere = "fact_sphere_cli.cli:fact_sphere_cli"
